added app.use require controllers to connect the server.js to use the route/controller folder which has index.js with a simple get request for root get for root

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Cheez0id/EpiMood#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1"
   }
